--- a/my-app/src/components/Component3/Footer.css
+++ b/my-app/src/components/Component3/Footer.css
@@ -1,5 +1,5 @@
 footer {
-    background-color: #1eda18f8;
+    background-color: #ffffff;
     padding: 20px;
     text-align: center;
     position: fixed;
@@ -9,6 +9,6 @@ footer {
   
   p {
     font-size: 14px;
-    color: #008383d2;
+    color: #000000;
   }
   
