--- a/my-app/src/components/Component7/Vlan.css
+++ b/my-app/src/components/Component7/Vlan.css
@@ -17,7 +17,7 @@
   }
   
   .addButton {
-    background-color: #4CAF50;
+    background-color: #4cacaf;
     color: white;
     padding: 10px;
     font-size: 16px;
