modified:   my-app/src/components/Component10/Clima.css

--- a/my-app/src/components/Component10/Clima.css
+++ b/my-app/src/components/Component10/Clima.css
@@ -1,9 +1,9 @@
-.weather-app {
+.Clima {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.weather-button {
+.ButtonC{
   margin-top: 20px;
 }
