--- a/my-app/src/components/Component10/Clima.css
+++ b/my-app/src/components/Component10/Clima.css
@@ -1,9 +1,9 @@
-.Clima {
+.weather-app {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.ButtonC{
+.weather-button {
   margin-top: 20px;
 }
