--- a/my-app/src/components/Component10/Clima.css
+++ b/my-app/src/components/Component10/Clima.css
@@ -1,9 +1,16 @@
-.weather-app {
+.weather-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+}
+
+.button-container {
+  margin-top: 40px;
 }
 
 .weather-button {
-  margin-top: 20px;
+  padding: 10px;
+  font-size: 18px;
+  background-color:
 }
